# xcompile

./: .gitignore  CMakeLists.txt  README.md  cli.js  eslint.config.js  node.env  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yaml  release.yaml
grammars/: asm.bnf  bnf.bnf  c.bnf  c23.bnf  c_manual.bnf
grammars/c23/: common.bnf  identifier.bnf  language.bnf  preprocessing.bnf  punctuator.bnf
lib/: native.cxx
scripts/: ast.js  bnf.js  bnf.ts  build.sh  c-pp.js  c.js  dump.js
src/: asm.ts  bnf.backup.json  bnf.bnf  bnf.json  bnf.ts  c-pp.ts  c.ts  clang.ts  cli.ts  config.ts  index.ts  ir.ts  issue.ts  metadata.ts  native.ts  parser.ts  tokenizer.ts  tokens.ts  typescript.ts  xir.ts
src/lang/: clang.ts  index.ts  typescript.ts  x-specific.ts
src/native/: native.cxx
test/: asm.bnf  asm.ebnf  asm.json  asm.pd  asm.pld  asm.ts  bnf.ts  test.S
